# continuity

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/lib/client/: Cargo.toml
src/lib/client/src/: lib.rs
src/lib/common/: Cargo.toml
src/lib/common/src/: lib.rs
src/lib/host/src/: lib.rs
src/lib/host_daemon_lib/: Cargo.toml
src/lib/host_daemon_lib/src/: lib.rs
src/lib/sharescr/: Cargo.toml
src/lib/sharescr/src/: lib.rs  windows.rs
src/lib/sharescr/src/linux/: wayland.rs  x11.rs
