[workspace]
members = [
    "src/lib/client",
    "src/lib/common",
    "src/lib/host",
    "src/bin/client_adapter",
    "src/bin/host_daemon"
]

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
debug = false
