[package]
name = "sharescr"
version = "0.1.0"
edition = "2021"

[features]
default = []
windows = ["dxgcap"]
x11 = ["x11cap"]
wayland = ["portal-screencast", "pipewire"]
# add macos (needs external contribution)

[dependencies]
dxgcap = { version = "0.2.4", optional = true }
x11cap = { version = "0.4.1", optional = true }
portal-screencast = { version = "0.1.0", optional = true }
pipewire = { version = "0.4.1", optional = true }
