[package]
name = "sharescr"
version = "0.1.0"
edition = "2021"

[features]
default = []
# add macos (needs external contribution)

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
dxgcap = { version = "0.2.4" }

[target.'cfg(target_os = "linux")'.dependencies]
portal-screencast = { version = "0.1.0" }
pipewire = { version = "0.4.1" }
x11cap = { version = "0.4.1" }
