[package]
name = "sharescr"
version = "0.1.0"
edition = "2021"

[features]
default = []
# add macos (needs external contribution)

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
dxgcap = "0.2.4"

[target.'cfg(target_os = "linux")'.dependencies]
portal-screencast = "0.1.0"
pipewire = "0.4.1"
x11cap = "0.4.1"
